force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/AAV_Asset_Availability_Output_Field__mdt.object-meta.xml
<CustomObject>
    <description>Asset Availability Data Output Columns to be displayed in Table.</description>
    <label>Asset Availability Output Field</label>
    <pluralLabel>Asset Availability Output Fields</pluralLabel>
</CustomObject>