force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Name of the column we get from API response</description>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>