force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>