force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>