force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/fields/Parent_Container__c.field-meta.xml
<CustomField>
    <fullName>Parent_Container__c</fullName>
    <label>Parent Container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>