force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Availability</fullName>
                <default>true</default>
                <label>Service Availability</label>
            </value>
            <value>
                <fullName>Outage Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>