force-app/main/default/objects/AAV_Asset_Availability_Output_Field__mdt/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display on UI</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>